2011-01-08  Peter Schueller  <ps@kr.tuwien.ac.at>

	* testsuite/TestDLOptimizer.cpp: Fixing search path of plugin
	container for testsuite. This avoids LD_LIBRARY_PATH tricks.

2011-01-04  Peter Schueller  <ps@kr.tuwien.ac.at>

	* src/HexDLConverter.cpp: Fixing issues related to spirit's lexer
	token attributes (if one attribute is specified, all have to be)
	and to a bug arising from that (lexeme[-tok<char> >> tok<string>])
	creates zero-bytes in a resulting synthesized string attribute.
	* src/HexDLRewriter.cpp: Likewise.
	* testsuite/TestDLOptimizer.cpp: Likewise.

2010-10-05  Peter Schueller  <ps@kr.tuwien.ac.at>

	* README: Fixed #namespace syntax (ticket #28).
	* examples/booze.hex: Likewise.

2010-07-19  Peter Schueller  <ps@kr.tuwien.ac.at>

	* testsuite/RacerStartOrRestart.sh: (Re)starting racer before each test
	(it tends to become unstable with much input).
	* testsuite/RacerRunner.sh: Likewise (old script/strange behavior removed).
	* testsuite/Makefile.am: Likewise.

2010-07-19  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* racer_bugreport/README.txt: Add new racer bugreport.
	* racer_bugreport/racer-bad-cmd-seq.racer: Likewise.

2010-07-09  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* NEWS: Add list of user-visible changes.

	* configure.ac (AC_INIT): Bump version to 1.7.1.

2010-07-07  Peter Schueller  <ps@kr.tuwien.ac.at>

	* src/AtomSeparator.cpp: No longer using setAlwaysFO because this
	is no longer necessary (printing is no longer per default in HO mode).
	* src/HexDLRewriter.cpp: Likewise.

2010-06-23  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* README: Update.
	* MAINTAINER-README: Likewise.

2010-06-22  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	Release version 1.7.0.

2010-06-21  Peter Schueller  <ps@kr.tuwien.ac.at>

	* testsuite/Makefile.am: Changing order of libraries, such that
	libtool will correctly order the -rpath directives.

2010-06-19  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* NEWS: Update.
